--- a/Exercice-Semaine03/52-etudiant/etudiant.html
+++ b/Exercice-Semaine03/52-etudiant/etudiant.html
@@ -23,7 +23,7 @@
                 <th>Total</th>
             </tr>
         </thead>
-        <tbody id="dude">
+        <tbody>
             <script src="js/etudiant.js"></script>
         </tbody>
     </table>
